crates/orator-core/tests/snapshots/lower_operations__form_urlencoded.snap
---
source: crates/orator-core/tests/lower_operations.rs
expression: ops
---
[
    OperationIr {
        operation_id: "login",
        description: Some(
            "Login with form credentials",
        ),
        method: Post,
        path: "/login",
        tag: None,
        parameters: [],
        request_body: Some(
            RequestBodyIr {
                content_type: FormUrlEncoded,
                type_ref: Named(
                    "LoginForm",
                ),
                required: true,
                fields: None,
            },
        ),
        responses: [
            OperationResponse {
                status_code: Code(
                    200,
                ),
                description: Some(
                    "Login successful",
                ),
                body: Some(
                    ResponseBody {
                        content_type: Json,
                        type_ref: Named(
                            "Token",
                        ),
                    },
                ),
                headers: [],
            },
            OperationResponse {
                status_code: Code(
                    401,
                ),
                description: Some(
                    "Invalid credentials",
                ),
                body: None,
                headers: [],
            },
        ],
    },
]
