crates/orator-core/tests/snapshots/lower_operations__multipart.snap
---
source: crates/orator-core/tests/lower_operations.rs
expression: ops
---
[
    OperationIr {
        operation_id: "uploadDocument",
        description: Some(
            "Upload a document with metadata",
        ),
        method: Post,
        path: "/upload",
        tag: None,
        parameters: [],
        request_body: Some(
            RequestBodyIr {
                content_type: MultipartFormData,
                type_ref: Primitive(
                    String,
                ),
                required: true,
                fields: Some(
                    [
                        Field {
                            name: "description",
                            type_ref: Primitive(
                                String,
                            ),
                            required: false,
                            description: None,
                        },
                        Field {
                            name: "file",
                            type_ref: Primitive(
                                Bytes,
                            ),
                            required: false,
                            description: None,
                        },
                    ],
                ),
            },
        ),
        responses: [
            OperationResponse {
                status_code: Code(
                    201,
                ),
                description: Some(
                    "Document uploaded",
                ),
                body: Some(
                    ResponseBody {
                        content_type: Json,
                        type_ref: Named(
                            "Document",
                        ),
                    },
                ),
                headers: [],
            },
            OperationResponse {
                status_code: Code(
                    400,
                ),
                description: Some(
                    "Bad request",
                ),
                body: None,
                headers: [],
            },
        ],
    },
]
