crates/orator-core/tests/snapshots/lower_operations__octet_stream.snap
---
source: crates/orator-core/tests/lower_operations.rs
expression: ops
---
[
    OperationIr {
        operation_id: "downloadFile",
        description: Some(
            "Download a binary file",
        ),
        method: Get,
        path: "/download",
        tag: None,
        parameters: [],
        request_body: None,
        responses: [
            OperationResponse {
                status_code: Code(
                    200,
                ),
                description: Some(
                    "File content",
                ),
                body: Some(
                    ResponseBody {
                        content_type: OctetStream,
                        type_ref: Primitive(
                            Bytes,
                        ),
                    },
                ),
                headers: [],
            },
            OperationResponse {
                status_code: Code(
                    404,
                ),
                description: Some(
                    "Not found",
                ),
                body: None,
                headers: [],
            },
        ],
    },
    OperationIr {
        operation_id: "uploadFile",
        description: Some(
            "Upload a binary file",
        ),
        method: Post,
        path: "/upload",
        tag: None,
        parameters: [],
        request_body: Some(
            RequestBodyIr {
                content_type: OctetStream,
                type_ref: Primitive(
                    Bytes,
                ),
                required: true,
                fields: None,
            },
        ),
        responses: [
            OperationResponse {
                status_code: Code(
                    200,
                ),
                description: Some(
                    "Upload successful",
                ),
                body: None,
                headers: [],
            },
            OperationResponse {
                status_code: Code(
                    400,
                ),
                description: Some(
                    "Bad request",
                ),
                body: None,
                headers: [],
            },
        ],
    },
]
