crates/orator-core/tests/snapshots/lower_operations__tennis_club_operations.snap
---
source: crates/orator-core/tests/lower_operations.rs
expression: ops
---
[
    OperationIr {
        operation_id: "listBookings",
        description: Some(
            "List all bookings",
        ),
        method: Get,
        path: "/bookings",
        tag: Some(
            "bookings",
        ),
        parameters: [],
        request_body: None,
        responses: [
            OperationResponse {
                status_code: Code(
                    200,
                ),
                description: Some(
                    "A list of bookings",
                ),
                body: Some(
                    ResponseBody {
                        content_type: Json,
                        type_ref: Array(
                            Named(
                                "Booking",
                            ),
                        ),
                    },
                ),
                headers: [],
            },
            OperationResponse {
                status_code: Code(
                    401,
                ),
                description: Some(
                    "Unauthorized",
                ),
                body: Some(
                    ResponseBody {
                        content_type: Json,
                        type_ref: Named(
                            "Error",
                        ),
                    },
                ),
                headers: [],
            },
        ],
    },
    OperationIr {
        operation_id: "listCourts",
        description: Some(
            "List all courts",
        ),
        method: Get,
        path: "/courts",
        tag: Some(
            "courts",
        ),
        parameters: [],
        request_body: None,
        responses: [
            OperationResponse {
                status_code: Code(
                    200,
                ),
                description: Some(
                    "A list of courts",
                ),
                body: Some(
                    ResponseBody {
                        content_type: Json,
                        type_ref: Array(
                            Named(
                                "Court",
                            ),
                        ),
                    },
                ),
                headers: [],
            },
            OperationResponse {
                status_code: Code(
                    401,
                ),
                description: Some(
                    "Unauthorized",
                ),
                body: Some(
                    ResponseBody {
                        content_type: Json,
                        type_ref: Named(
                            "Error",
                        ),
                    },
                ),
                headers: [],
            },
        ],
    },
    OperationIr {
        operation_id: "uploadCourtPhoto",
        description: Some(
            "Upload a court photo with metadata",
        ),
        method: Put,
        path: "/courts/{court_id}/photo",
        tag: Some(
            "courts",
        ),
        parameters: [
            OperationParam {
                name: "court_id",
                description: None,
                location: Path,
                type_ref: Primitive(
                    Uuid,
                ),
                required: true,
            },
        ],
        request_body: Some(
            RequestBodyIr {
                content_type: MultipartFormData,
                type_ref: Primitive(
                    String,
                ),
                required: true,
                fields: Some(
                    [
                        Field {
                            name: "caption",
                            type_ref: Primitive(
                                String,
                            ),
                            required: false,
                            description: None,
                        },
                        Field {
                            name: "photo",
                            type_ref: Primitive(
                                Bytes,
                            ),
                            required: false,
                            description: None,
                        },
                    ],
                ),
            },
        ),
        responses: [
            OperationResponse {
                status_code: Code(
                    204,
                ),
                description: Some(
                    "Photo uploaded",
                ),
                body: None,
                headers: [],
            },
            OperationResponse {
                status_code: Code(
                    404,
                ),
                description: Some(
                    "Court not found",
                ),
                body: Some(
                    ResponseBody {
                        content_type: Json,
                        type_ref: Named(
                            "Error",
                        ),
                    },
                ),
                headers: [],
            },
        ],
    },
    OperationIr {
        operation_id: "healthCheck",
        description: Some(
            "Check API health",
        ),
        method: Get,
        path: "/health",
        tag: Some(
            "health",
        ),
        parameters: [],
        request_body: None,
        responses: [
            OperationResponse {
                status_code: Code(
                    200,
                ),
                description: Some(
                    "Service is healthy",
                ),
                body: Some(
                    ResponseBody {
                        content_type: TextPlain,
                        type_ref: Primitive(
                            String,
                        ),
                    },
                ),
                headers: [],
            },
        ],
    },
    OperationIr {
        operation_id: "listMembers",
        description: Some(
            "List all members",
        ),
        method: Get,
        path: "/members",
        tag: Some(
            "members",
        ),
        parameters: [
            OperationParam {
                name: "X-Request-ID",
                description: Some(
                    "Unique request identifier for tracing",
                ),
                location: Header,
                type_ref: Primitive(
                    String,
                ),
                required: true,
            },
            OperationParam {
                name: "X-Page-Size",
                description: Some(
                    "Optional page size override via header",
                ),
                location: Header,
                type_ref: Primitive(
                    I32,
                ),
                required: false,
            },
            OperationParam {
                name: "session_id",
                description: Some(
                    "Session identifier cookie",
                ),
                location: Cookie,
                type_ref: Primitive(
                    String,
                ),
                required: true,
            },
            OperationParam {
                name: "limit",
                description: Some(
                    "Maximum number of members to return",
                ),
                location: Query,
                type_ref: Primitive(
                    I32,
                ),
                required: false,
            },
            OperationParam {
                name: "offset",
                description: Some(
                    "Number of members to skip",
                ),
                location: Query,
                type_ref: Primitive(
                    I32,
                ),
                required: false,
            },
        ],
        request_body: None,
        responses: [
            OperationResponse {
                status_code: Code(
                    200,
                ),
                description: Some(
                    "A list of members",
                ),
                body: Some(
                    ResponseBody {
                        content_type: Json,
                        type_ref: Array(
                            Named(
                                "Member",
                            ),
                        ),
                    },
                ),
                headers: [],
            },
            OperationResponse {
                status_code: Code(
                    401,
                ),
                description: Some(
                    "Unauthorized",
                ),
                body: Some(
                    ResponseBody {
                        content_type: Json,
                        type_ref: Named(
                            "Error",
                        ),
                    },
                ),
                headers: [],
            },
            OperationResponse {
                status_code: Default,
                description: Some(
                    "Unexpected error",
                ),
                body: Some(
                    ResponseBody {
                        content_type: Json,
                        type_ref: Named(
                            "Error",
                        ),
                    },
                ),
                headers: [],
            },
        ],
    },
    OperationIr {
        operation_id: "createMember",
        description: Some(
            "Create a new member",
        ),
        method: Post,
        path: "/members",
        tag: Some(
            "members",
        ),
        parameters: [],
        request_body: Some(
            RequestBodyIr {
                content_type: Json,
                type_ref: Named(
                    "NewMember",
                ),
                required: true,
                fields: None,
            },
        ),
        responses: [
            OperationResponse {
                status_code: Code(
                    201,
                ),
                description: Some(
                    "The created member",
                ),
                body: Some(
                    ResponseBody {
                        content_type: Json,
                        type_ref: Named(
                            "Member",
                        ),
                    },
                ),
                headers: [],
            },
            OperationResponse {
                status_code: Code(
                    422,
                ),
                description: Some(
                    "Validation error",
                ),
                body: Some(
                    ResponseBody {
                        content_type: Json,
                        type_ref: Named(
                            "Error",
                        ),
                    },
                ),
                headers: [],
            },
        ],
    },
    OperationIr {
        operation_id: "getMember",
        description: Some(
            "Get a member by ID",
        ),
        method: Get,
        path: "/members/{member_id}",
        tag: Some(
            "members",
        ),
        parameters: [
            OperationParam {
                name: "member_id",
                description: None,
                location: Path,
                type_ref: Primitive(
                    Uuid,
                ),
                required: true,
            },
        ],
        request_body: None,
        responses: [
            OperationResponse {
                status_code: Code(
                    200,
                ),
                description: Some(
                    "The member",
                ),
                body: Some(
                    ResponseBody {
                        content_type: Json,
                        type_ref: Named(
                            "Member",
                        ),
                    },
                ),
                headers: [],
            },
            OperationResponse {
                status_code: Code(
                    404,
                ),
                description: Some(
                    "Member not found",
                ),
                body: Some(
                    ResponseBody {
                        content_type: Json,
                        type_ref: Named(
                            "Error",
                        ),
                    },
                ),
                headers: [],
            },
        ],
    },
    OperationIr {
        operation_id: "updateMember",
        description: Some(
            "Update a member",
        ),
        method: Patch,
        path: "/members/{member_id}",
        tag: Some(
            "members",
        ),
        parameters: [
            OperationParam {
                name: "member_id",
                description: None,
                location: Path,
                type_ref: Primitive(
                    Uuid,
                ),
                required: true,
            },
        ],
        request_body: Some(
            RequestBodyIr {
                content_type: Json,
                type_ref: Named(
                    "UpdateMember",
                ),
                required: true,
                fields: None,
            },
        ),
        responses: [
            OperationResponse {
                status_code: Code(
                    200,
                ),
                description: Some(
                    "The updated member",
                ),
                body: Some(
                    ResponseBody {
                        content_type: Json,
                        type_ref: Named(
                            "Member",
                        ),
                    },
                ),
                headers: [],
            },
            OperationResponse {
                status_code: Code(
                    404,
                ),
                description: Some(
                    "Member not found",
                ),
                body: Some(
                    ResponseBody {
                        content_type: Json,
                        type_ref: Named(
                            "Error",
                        ),
                    },
                ),
                headers: [],
            },
        ],
    },
    OperationIr {
        operation_id: "deleteMember",
        description: Some(
            "Delete a member",
        ),
        method: Delete,
        path: "/members/{member_id}",
        tag: Some(
            "members",
        ),
        parameters: [
            OperationParam {
                name: "member_id",
                description: None,
                location: Path,
                type_ref: Primitive(
                    Uuid,
                ),
                required: true,
            },
        ],
        request_body: None,
        responses: [
            OperationResponse {
                status_code: Code(
                    204,
                ),
                description: Some(
                    "Member deleted",
                ),
                body: None,
                headers: [],
            },
            OperationResponse {
                status_code: Code(
                    404,
                ),
                description: Some(
                    "Member not found",
                ),
                body: Some(
                    ResponseBody {
                        content_type: Json,
                        type_ref: Named(
                            "Error",
                        ),
                    },
                ),
                headers: [],
            },
        ],
    },
    OperationIr {
        operation_id: "getMemberPhoto",
        description: Some(
            "Download a member's profile photo",
        ),
        method: Get,
        path: "/members/{member_id}/photo",
        tag: Some(
            "members",
        ),
        parameters: [
            OperationParam {
                name: "member_id",
                description: None,
                location: Path,
                type_ref: Primitive(
                    Uuid,
                ),
                required: true,
            },
        ],
        request_body: None,
        responses: [
            OperationResponse {
                status_code: Code(
                    200,
                ),
                description: Some(
                    "The profile photo",
                ),
                body: Some(
                    ResponseBody {
                        content_type: OctetStream,
                        type_ref: Primitive(
                            Bytes,
                        ),
                    },
                ),
                headers: [],
            },
            OperationResponse {
                status_code: Code(
                    404,
                ),
                description: Some(
                    "Member or photo not found",
                ),
                body: Some(
                    ResponseBody {
                        content_type: Json,
                        type_ref: Named(
                            "Error",
                        ),
                    },
                ),
                headers: [],
            },
        ],
    },
    OperationIr {
        operation_id: "uploadMemberPhoto",
        description: Some(
            "Upload a member's profile photo",
        ),
        method: Put,
        path: "/members/{member_id}/photo",
        tag: Some(
            "members",
        ),
        parameters: [
            OperationParam {
                name: "member_id",
                description: None,
                location: Path,
                type_ref: Primitive(
                    Uuid,
                ),
                required: true,
            },
        ],
        request_body: Some(
            RequestBodyIr {
                content_type: OctetStream,
                type_ref: Primitive(
                    Bytes,
                ),
                required: true,
                fields: None,
            },
        ),
        responses: [
            OperationResponse {
                status_code: Code(
                    204,
                ),
                description: Some(
                    "Photo uploaded",
                ),
                body: None,
                headers: [],
            },
            OperationResponse {
                status_code: Code(
                    404,
                ),
                description: Some(
                    "Member not found",
                ),
                body: Some(
                    ResponseBody {
                        content_type: Json,
                        type_ref: Named(
                            "Error",
                        ),
                    },
                ),
                headers: [],
            },
        ],
    },
]
